...
            //                            EditButton()
            //                        }
            
            .sheet(isPresented: $showingAddAlert) {
                AddEventView()
            }
            .navigationTitle("Events")
            .listStyle(.sidebar)
            .toolbar {
#if os(iOS)
                ToolbarItem(placement: .navigationBarLeading) {
                    EditButton()
                }
#endif
                ToolbarItem {
                    Button {
                        showingAddAlert.toggle()
                    } label: {
                        Label("Add Event", systemImage: "plus")
                    }
                }
            }
#if os(OSX)
            .frame(minWidth: 200)
#endif
...
